[package]
name = "sithtipah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
rusqlite = "0.28.0"
dotenv = "0.15.0"
async-trait = "0.1.60"
tokio = { version = "1.23.0", features = ["full"] }
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
futures = "0.3.25"
regex = "1.7.1"